# battleGameCpp

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
include/: game.hpp  gameCharacter.hpp  npc.hpp  player.hpp  utils.hpp  weapon.hpp
src/: game.cpp  gameCharacter.cpp  main.cpp  npc.cpp  player.cpp  weapon.cpp
